Configure Dev environment with profiles and credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-spring.application.name=eureka-server
+spring.application.name=EUREKA-SERVER
+
+# colorful terminal output
+spring.output.ansi.enabled=always
+
+#Profile & PORT
+spring.profiles.active=${ENV:dev}
+server.port=${PORT:8080}
+
+#To include error message in response
+server.error.include-message=always
